Party Sheet Fixes (#626)
* fix: Make bottom of names not cropped in party sheet
* feat: Party backgrounds also account for class level

--- a/styles/css/actor/actor-v1/actor.css
+++ b/styles/css/actor/actor-v1/actor.css
@@ -806,6 +806,8 @@
 
 .projectfu .party .overview .plate .name {
 	margin-top: 4px;
+	margin-bottom: -8px;
+	padding-bottom: 8px;
 	font-size: 2rem;
 	text-align: center;
 	font-weight: 800;
